BUG#12873 - BTREE index on MEMORY table with multiple NULL values             doesn't work properly

Unique BTREE index on MEMORY table refuse multiple NULL values.

Fixed search_flag to allow multiple null values inside unique key.


heap/hp_write.c:
  Fixed search_flag to allow multiple null values inside unique key.
mysql-test/r/heap_btree.result:
  Testcase for BUG#12873.
mysql-test/t/heap_btree.test:
  Testcase for BUG#12873.